[package]
name = "clap-interactive"
version = "0.1.0"
edition = "2021"
authors = ["Eric Woolsey<ewoolsey@ualberta.ca>"]
license = "MIT"
description = "A work in progress interactive parser for clap."
repository = "https://github.com/ewoolsey/clap-interactive"
keywords = ["clap", "parser", "interactive", "cli", "shell"]
readme = "README.md"

[dependencies]
clap = { version = "4.0.18" }
inquire = "0.4.0"

[dev-dependencies]
clap = { version = "4.0.18", features = ["derive"] }