[package]
name = "clap-interactive"
version = "0.2.0"
edition = "2021"
authors = ["Eric Woolsey<ewoolsey@ualberta.ca>"]
license = "MIT"
description = "A work in progress interactive parser for clap."
repository = "https://github.com/ewoolsey/clap-interactive"
keywords = ["clap", "parser", "interactive", "cli", "shell"]
readme = "README.md"

[dependencies]
thiserror = "1"
clap = { version = "4.0.18" }
inquire = "0.5.1"

[dev-dependencies]
clap = { version = "4.0.18", features = ["derive"] }